tdf#122990: return if no mpMenuBarContainerWidget in ApplyPersona

Related to patches for tdf#122241

Change-Id: I0ce46a3a362855aaa6c11f375d20c2212f1cb20b